# axum_either

./: Cargo.toml  README.md
examples/: form_or_json.rs  one_of_extract.rs
examples/web/: form_or_json.html
src/: lib.rs
tests/: form_or_json.rs
