[package]
name = "axum_either"
version = "0.1.0"
edition = "2021"

[features]
into_either = ["either"]

default = ["into_either"]

[dependencies]
async-trait = "0.1.56"
axum-core = "0.2.7"
http = "0.2.8"

either = { version = "1.7.0", optional = true }

[dev-dependencies]
axum = "0.5.13"
tokio = { version = "1.20.1", features = ["full"] }
reqwest = { version = "0.11.11", default-features = false, features = ["json", "tokio-rustls", "rustls-tls"] }
serde = { version = "1.0.140", features = ["derive"] }
anyhow = "1.0.58"
